--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,9 @@ update-manager (1:0.87.25) hardy-proposed; urgency=low
       initialized (#221023)
   * DistUpgrade/mirrors.cfg:
     - added missing russion mirror (LP: #221730)
+  * DistUpgrade/DistUpgrade.cfg:
+    - better detection to missing dependencies to fix
+      ubuntustudio-desktop upgrade problem (#219659)
 
  --
 
