--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+update-manager (1:0.87.26) hardy-proposed; urgency=low
+
+  * DistUpgrade/DistUpgradeController.py:
+    - run in server mode on a server CD (LP: #222895)
+
+ --
+
 update-manager (1:0.87.25) hardy-proposed; urgency=low
 
   * DistUpgrade/DistUpgradeApport.py:
