--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,9 @@ update-manager (1:0.87.26) hardy-proposed; urgency=low
 
   * DistUpgrade/DistUpgradeController.py:
     - run in server mode on a server CD (LP: #222895)
+  * DistUpgrade/DistUpradeCache.py:
+    - make the code more robust against unavailable
+      package records (LP: #223619)
   * DistUpgrade/cdromupgrade:
     - allow passing of arguments (like --mode=server)
       to better support server upgrades with the dvd
