--- a/debian/changelog
+++ b/debian/changelog
@@ -15,7 +15,7 @@ update-manager (1:0.87.26) hardy-proposed; urgency=low
     - fix translation so that it gets the expected 
       number of arguments (LP: #224294)
 
- --
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 30 Apr 2008 22:15:44 +0200
 
 update-manager (1:0.87.25) hardy-proposed; urgency=low
 
