--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.87.28~ppa1) hardy; urgency=low
+update-manager (1:0.87.28) hardy-proposed; urgency=low
 
   * DistUpgrade/mirrors.cfg:
     - remove ftp.caliu.info (LP: #231966)
@@ -8,6 +8,8 @@ update-manager (1:0.87.28~ppa1) hardy; urgency=low
     - provide a gconf key /apps/update-manager/autoclose_install_window
       to make it possible to prevent automatic closing of the installation
       window (LP: #183209)
+  * add extra paraonoia when adding a missing admin group
+    (thanks to LaMont Jones)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 03 Jun 2008 12:25:11 +0200
 
