--- a/debian/changelog
+++ b/debian/changelog
@@ -9,7 +9,7 @@ update-manager (1:0.87.28) hardy-proposed; urgency=low
       to make it possible to prevent automatic closing of the installation
       window (LP: #183209)
   * add extra paraonoia when adding a missing admin group
-    (thanks to LaMont Jones)
+    (thanks to LaMont Jones) LP: #241723
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 03 Jun 2008 12:25:11 +0200
 
