--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+update-manager (1:0.87.29) hardy-proposed; urgency=low
+
+  * fix sparc upgrades prerequisites fetching (LP: #239458)
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 24 Jun 2008 22:10:03 +0200
+
 update-manager (1:0.87.28) hardy-proposed; urgency=low
 
   * DistUpgrade/mirrors.cfg:
