--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+update-manager (1:0.93.6) intrepid; urgency=low
+
+  * DistUpgrade/DistUpgradeCache.py:
+    - transition "kubuntu-desktop-kde4" to "kubuntu-desktop"
+      (thanks to Jonathan Riddell)
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 05 Sep 2008 19:41:04 +0200
+
 update-manager (1:0.93.5) intrepid; urgency=low
 
   [ Michael Vogt ]
