--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,10 @@ update-manager (1:0.93.6) intrepid; urgency=low
   * DistUpgrade/DistUpgradeCache.py:
     - transition "kubuntu-desktop-kde4" to "kubuntu-desktop"
       (thanks to Jonathan Riddell)
+  * DistUpgrade/DistUpgradeCache.py,
+    DistUpgrade/DistUpgradeController.py:
+    - fixes in the "AllowUnauthenticated" code (thanks to Adam
+      Conrad)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 05 Sep 2008 19:41:04 +0200
 
