--- a/debian/changelog
+++ b/debian/changelog
@@ -8,8 +8,11 @@ update-manager (1:0.93.30) intrepid; urgency=low
       (LP: #288051)
   * DistUpgrade/ReleaseAnnouncement:
     - updated for final release
+  * DistUpgrade/DistUpgradeAptCdrom.py:
+    - ignore "dist-upgrader" dirs when scanning for 
+      packages (LP: #288169)
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 23 Oct 2008 16:31:29 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 23 Oct 2008 16:53:43 +0200
 
 update-manager (1:0.93.29) intrepid; urgency=low
 
