--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,9 @@ update-manager (1:0.93.31) intrepid; urgency=low
     - mark "language-pack-$lang" as manual installed to
       workaround changes in "language-support-$lang" 
       (LP: #287551)
+   * po/:
+     - updated to the latest translations.launchpad.net
+       version
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 24 Oct 2008 15:02:03 +0200
 
