--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.93.33) intrepid; urgency=low
+update-manager (1:0.93.33) intrepid-proposed; urgency=low
 
   [ Michael Vogt ]
   * DistUpgrade/DistUpgradeQuirks.py:
@@ -13,7 +13,7 @@ update-manager (1:0.93.33) intrepid; urgency=low
     - handle translations of non-ascii string on Cancel button 
       correctly (LP: #291115)
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 29 Oct 2008 20:56:20 +0100
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 04 Nov 2008 14:58:10 +0100
 
 update-manager (1:0.93.32) intrepid; urgency=low
 
