--- a/debian/changelog
+++ b/debian/changelog
@@ -3,7 +3,11 @@ update-manager (1:0.98.2) jaunty; urgency=low
   * DistUpgrade/DistUpgradeController.py:
     - enable apport crash capturing during upgrades
 
- --
+  [ Brian Murray ]
+  * DistUpgrade/multiple files:
+    - fixed typographical error
+
+ -- Brian Murray <brian@ubuntu.com>  Thu, 19 Feb 2009 09:14:26 -0800
 
 update-manager (1:0.98.1) jaunty; urgency=low
 
