--- a/po/zh_HK.po
+++ b/po/zh_HK.po
@@ -3,15 +3,15 @@ msgstr ""
 "Project-Id-Version: update-manager 0.41.1\n"
 "Report-Msgid-Bugs-To: sebastian.heinlein@web.de\n"
 "POT-Creation-Date: 2013-05-22 21:30+0100\n"
-"PO-Revision-Date: 2013-05-22 15:22+0000\n"
-"Last-Translator: Johnny Tong <Unknown>\n"
+"PO-Revision-Date: 2013-10-18 13:25+0000\n"
+"Last-Translator: Walter Cheuk <wwycheuk@gmail.com>\n"
 "Language-Team: Chinese (Hong Kong) <zh_HK@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Launchpad-Export-Date: 2013-10-12 05:51+0000\n"
-"X-Generator: Launchpad (build 16799)\n"
+"X-Launchpad-Export-Date: 2013-10-19 05:15+0000\n"
+"X-Generator: Launchpad (build 16807)\n"
 "Language: zh_HK\n"
 
 #. TRANSLATORS: %s is a country
@@ -805,7 +805,7 @@ msgstr ""
 
 #: ../DistUpgrade/DistUpgradeQuirks.py:511
 msgid "Your graphics hardware may not be fully supported in Ubuntu 13.04."
-msgstr ""
+msgstr "Ubuntu 13.04 未必能完全支援你的圖像卡硬件。"
 
 #: ../DistUpgrade/DistUpgradeQuirks.py:248
 msgid ""
@@ -816,11 +816,14 @@ msgid ""
 "https://wiki.ubuntu.com/X/Bugs/UpdateManagerWarningForUnity3D Do you still "
 "want to continue with the upgrade?"
 msgstr ""
+"你的顯示卡硬件無法完整支援「unity」桌面環境的執行。你可能在升級之後遭遇異常緩慢的環境。我們目前建議你繼續維持使用 LTS "
+"版本。若要瞭解更多資訊，請見 https://wiki.ubuntu.com/X/Bugs/UpdateManagerWarningForUnity3D "
+"。你仍想要繼續升級嗎？"
 
 #: ../DistUpgrade/DistUpgradeQuirks.py:272
 msgid ""
 "Your graphics hardware may not be fully supported in Ubuntu 12.04 LTS."
-msgstr ""
+msgstr "Ubuntu 12.04 LTS 未必能完全支援你的圖像卡硬件。"
 
 #: ../DistUpgrade/DistUpgradeQuirks.py:274
 msgid ""
@@ -829,6 +832,8 @@ msgid ""
 "https://wiki.ubuntu.com/X/Bugs/UpdateManagerWarningForI8xx Do you want to "
 "continue with the upgrade?"
 msgstr ""
+"Ubuntu 12.04 LTS 對你的 Intel 圖像卡硬件支援有限，升級之後你可能會碰到一些問題。更多資訊可以查看 "
+"https://wiki.ubuntu.com/X/Bugs/UpdateManagerWarningForI8xx 。你仍想要繼續升級嗎？"
 
 #: ../DistUpgrade/DistUpgradeQuirks.py:294
 msgid ""
@@ -1348,7 +1353,7 @@ msgstr "移除套件可能會花上幾個鐘頭。 "
 #. FIXME: this should go into DistUpgradeController
 #: ../DistUpgrade/DistUpgradeView.py:407
 msgid "The software on this computer is up to date."
-msgstr ""
+msgstr "這台電腦的軟件已處最新狀態。"
 
 #: ../DistUpgrade/DistUpgradeView.py:408
 msgid ""
@@ -1524,7 +1529,7 @@ msgstr "發行版升級"
 
 #: ../data/gtkbuilder/DistUpgrade.ui.h:19
 msgid "<b><big>Upgrading Ubuntu to version 13.04</big></b>"
-msgstr ""
+msgstr "<b><big>將 Ubuntu 升級至 13.04 版</big></b>"
 
 #: ../data/gtkbuilder/DistUpgrade.ui.h:20
 msgid "    "
@@ -1571,11 +1576,11 @@ msgstr "您已拒絕升級至新版 Ubuntu"
 msgid ""
 "You can upgrade at a later time by opening Software Updater and click on "
 "\"Upgrade\"."
-msgstr ""
+msgstr "你之後若要升級，可以開啟「軟件更新」，再點擊「升級」。"
 
 #: ../data/com.ubuntu.release-upgrader.policy.in.h:1
 msgid "Perform a release upgrade"
-msgstr ""
+msgstr "執行發行版升級"
 
 #: ../data/com.ubuntu.release-upgrader.policy.in.h:2
 msgid "To upgrade Ubuntu, you need to authenticate."
@@ -1639,7 +1644,7 @@ msgstr "檢查是否有新的發行版並以結束碼報告結果"
 
 #: ../do-release-upgrade:108
 msgid "Checking for a new Ubuntu release"
-msgstr ""
+msgstr "檢查是否有新的 Ubuntu 發行版"
 
 #: ../do-release-upgrade:121
 msgid "Your Ubuntu release is not supported anymore."
