--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:0.210) UNRELEASED; urgency=low
+
+  * data/DistUpgrade.cfg.precise: change kernel removals to 3.2.0
+
+ -- Brian Murray <brian@ubuntu.com>  Tue, 29 Oct 2013 10:43:30 -0700
+
 ubuntu-release-upgrader (1:0.209) trusty; urgency=low
 
   [ Jean-Baptiste Lallement ]
