--- a/po/pl.po
+++ b/po/pl.po
@@ -14,7 +14,7 @@ msgstr ""
 "Project-Id-Version: update-manager 0.87\n"
 "Report-Msgid-Bugs-To: sebastian.heinlein@web.de\n"
 "POT-Creation-Date: 2013-05-22 21:30+0100\n"
-"PO-Revision-Date: 2013-05-23 02:44+0000\n"
+"PO-Revision-Date: 2013-11-08 16:24+0000\n"
 "Last-Translator: GTriderXC <gtriderxc@yahoo.com>\n"
 "Language-Team: Polish <ubuntu-pl-l10n@lists.ubuntu.com>\n"
 "MIME-Version: 1.0\n"
@@ -22,7 +22,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
 "|| n%100>=20) ? 1 : 2;\n"
-"X-Launchpad-Export-Date: 2013-11-06 05:45+0000\n"
+"X-Launchpad-Export-Date: 2013-11-10 06:38+0000\n"
 "X-Generator: Launchpad (build 16820)\n"
 "Language: pl\n"
 
@@ -736,6 +736,13 @@ msgid ""
 "In the case of an overloaded mirror, you may want to try the upgrade again "
 "later."
 msgstr ""
+"Po aktualizacji informacji o pakietach, wymagany pakiet '%s' nie został "
+"znaleziony. Może to być spowodowane tym, że w Twoich źródłach oprogramowania "
+"nie ma zawartych oficjalnych serwerów lustrzanych lub tym, że te, których "
+"używasz są przeciążone. Przejrzyj /etc/apt/sources.list, by zobaczyć "
+"aktualną listę skonfigurowanych źródeł oprogramowania.\n"
+"W przypadku przeciążenia serwerów lustrzanych, warto spróbować uaktualnienia "
+"później."
 
 #: ../DistUpgrade/DistUpgradeController.py:1749
 #: ../DistUpgrade/DistUpgradeController.py:1805
@@ -949,6 +956,8 @@ msgstr ""
 #: ../DistUpgrade/DistUpgradeQuirks.py:511
 msgid "Your graphics hardware may not be fully supported in Ubuntu 13.04."
 msgstr ""
+"W Ubuntu 13.04 urządzenia grafiki tego komputera mogą nie być w pełni "
+"obsługiwane."
 
 #: ../DistUpgrade/DistUpgradeQuirks.py:248
 msgid ""
@@ -1289,7 +1298,7 @@ msgstr "Wystąpił błąd"
 
 #: ../DistUpgrade/DistUpgradeViewKDE.py:572
 msgid "&Cancel"
-msgstr ""
+msgstr "&Anuluj"
 
 #: ../DistUpgrade/DistUpgradeViewKDE.py:817
 msgid "&Close"
@@ -1734,7 +1743,7 @@ msgstr "Aktualizacja dystrybucji"
 
 #: ../data/gtkbuilder/DistUpgrade.ui.h:19
 msgid "<b><big>Upgrading Ubuntu to version 13.04</big></b>"
-msgstr ""
+msgstr "<b><big>Aktualizacja wersji Ubuntu do wersji 13.04</big></b>"
 
 #: ../data/gtkbuilder/DistUpgrade.ui.h:20
 msgid "    "
