--- a/po/es.po
+++ b/po/es.po
@@ -11,14 +11,14 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: sebastian.heinlein@web.de\n"
 "POT-Creation-Date: 2013-05-22 21:30+0100\n"
-"PO-Revision-Date: 2013-09-11 02:50+0000\n"
-"Last-Translator: Adolfo Jayme <fitoschido@gmail.com>\n"
+"PO-Revision-Date: 2013-12-13 17:12+0000\n"
+"Last-Translator: Paco Molinero <paco@byasl.com>\n"
 "Language-Team: Spanish <traductores@gnome.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2013-12-13 06:39+0000\n"
+"X-Launchpad-Export-Date: 2013-12-14 06:11+0000\n"
 "X-Generator: Launchpad (build 16869)\n"
 "Language: es\n"
 
@@ -185,12 +185,12 @@ msgstr "El paquete esencial «%s» ha sido marcado para su desinstalación."
 msgid "Trying to install blacklisted version '%s'"
 msgstr "Intentando instalar la versión prohibida «%s»"
 
-#: ../DistUpgrade/DistUpgradeCache.py:859
+#: ../DistUpgrade/DistUpgradeCache.py:860
 #, python-format
 msgid "Can't install '%s'"
 msgstr "No se ha podido instalar «%s»"
 
-#: ../DistUpgrade/DistUpgradeCache.py:860
+#: ../DistUpgrade/DistUpgradeCache.py:861
 msgid ""
 "It was impossible to install a required package. Please report this as a bug "
 "using 'ubuntu-bug ubuntu-release-upgrader-core' in a terminal."
@@ -198,12 +198,11 @@ msgstr ""
 "Fue imposible instalar un paquete requerido. Informe de esto como un error "
 "usando «ubuntu-bug ubuntu-release-upgrader-core» en una terminal."
 
-#. FIXME: provide a list
-#: ../DistUpgrade/DistUpgradeCache.py:871
+#: ../DistUpgrade/DistUpgradeCache.py:872
 msgid "Can't guess meta-package"
 msgstr "No se ha podido determinar el metapaquete"
 
-#: ../DistUpgrade/DistUpgradeCache.py:872
+#: ../DistUpgrade/DistUpgradeCache.py:871
 msgid ""
 "Your system does not contain a ubuntu-desktop, kubuntu-desktop, xubuntu-"
 "desktop or edubuntu-desktop package and it was not possible to detect which "
@@ -719,6 +718,13 @@ msgid ""
 "In the case of an overloaded mirror, you may want to try the upgrade again "
 "later."
 msgstr ""
+"Después de actualizar la información de paquete, el paquete esencial «%s» no "
+"se puede localizar. Esto puede deberse a que no tiene las réplicas oficiales "
+"listadas en sus de orígenes de software o por una carga excesiva en la "
+"réplica que está usando. Vea /etc/apt/sources.list para conocer la "
+"configuración de lista actual de orígenes de software.\n"
+"En caso de tratarse de una sobrecarga de la réplica, debe esperar para "
+"reintentar la actualización más tarde."
 
 #: ../DistUpgrade/DistUpgradeController.py:1749
 #: ../DistUpgrade/DistUpgradeController.py:1805
