--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 ubuntu-release-upgrader (1:0.210) UNRELEASED; urgency=low
 
+  [ Brian Murray ]
   * data/DistUpgrade.cfg.precise: change kernel removals to 3.2.0
   * source_ubuntu-release-upgrader.py: collect dmesg info when reporting
     upgrade failures
@@ -7,7 +8,17 @@ ubuntu-release-upgrader (1:0.210) UNRELEASED; urgency=low
     of MetaReleaseCore.  Thanks to Anders Kaseorg for the patch.
   * Don't build depend on scrollkeeper thanks to Jeremy Bicha for the patch.
 
- -- Brian Murray <brian@ubuntu.com>  Tue, 29 Oct 2013 10:43:30 -0700
+  [ Harald Sitter ]
+  * data/DistUpgrade.cfg.precise: change kubuntu-desktop key dependencies to
+    plasma-desktop, kubuntu-default-settings (previous ones did not exist or
+    were simply bad key dependencies) LP: #1264887
+    + Same for kubuntu-netbook using plasma-netbook,
+       kubuntu-netbook-default-settings.
+  * data/DistUpgrade.cfg: change kubuntu-desktop key dependencies to
+    plasma-desktop, kubuntu-settings-desktop
+    + Same for kubuntu-netbook using plasma-netbook, kubuntu-settings-netbook
+
+ -- Harald Sitter <apachelogger@kubuntu.org>  Fri, 17 Jan 2014 14:04:54 +0100
 
 ubuntu-release-upgrader (1:0.209) trusty; urgency=low
 
