--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:0.210) UNRELEASED; urgency=low
+ubuntu-release-upgrader (1:0.210) trusty; urgency=low
 
   [ Brian Murray ]
   * data/DistUpgrade.cfg.precise: change kernel removals to 3.2.0
@@ -18,7 +18,7 @@ ubuntu-release-upgrader (1:0.210) UNRELEASED; urgency=low
     plasma-desktop, kubuntu-settings-desktop
     + Same for kubuntu-netbook using plasma-netbook, kubuntu-settings-netbook
 
- -- Harald Sitter <apachelogger@kubuntu.org>  Fri, 17 Jan 2014 14:04:54 +0100
+ -- Brian Murray <brian@ubuntu.com>  Thu, 23 Jan 2014 16:14:37 -0800
 
 ubuntu-release-upgrader (1:0.209) trusty; urgency=low
 
