--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:0.211) UNRELEASED; urgency=medium
+
+  * DistUpgrade/DistUpgradeFetcherCore.py: set inheritance of file descriptors
+    for python3.4 (LP: #1272387)
+
+ -- Brian Murray <brian@ubuntu.com>  Mon, 24 Feb 2014 16:12:25 -0800
+
 ubuntu-release-upgrader (1:0.210) trusty; urgency=low
 
   [ Brian Murray ]
